// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<YozoraHeading
  className="custom-class"
  data-name="yozora-heading"
  identifier="heading-1"
  level={1}
  style={
    Object {
      "color": "orange",
      "fontSize": "16px",
    }
  }
>
  <div
    className="custom-class"
    data-name="yozora-heading"
    style={
      Object {
        "color": "orange",
        "fontSize": "16px",
      }
    }
  >
    <a
      href="#heading-1"
      id="heading-1"
    >
      <HeadingLinkIcon>
        <svg
          aria-hidden="true"
          height="16"
          version="1.1"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
            fillRule="evenodd"
          />
        </svg>
      </HeadingLinkIcon>
    </a>
    <h1>
      Waw -- 
      1
      , 中文标题“这”
    </h1>
  </div>
</YozoraHeading>
`;

exports[`snapshot default: level 2 1`] = `
<div
  class="yozora-heading"
  style="color:orange;font-size:16px"
>
  <a
    href="#heading-2"
    id="heading-2"
  >
    <svg
      aria-hidden="true"
      height="16"
      version="1.1"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z"
        fill-rule="evenodd"
      />
    </svg>
  </a>
  <h2>
    Waw -- 2, 中文标题“这”
  </h2>
</div>
`;
